# CCD-Forward-Kinematics

./: ArmSegment.cpp  ArmSegment.h  CMakeLists.txt  README.md  RobotArm.cpp  RobotArm.h  gnuplot-iostream.h  main.cpp
